<?xml version="1.0"?>
<package>
 <name>h4r_libsersyncproto</name>
 <version>0.0.0</version>
 <description>The h4r_libsersyncproto package</description>
 <maintainer email="cyborgx1@gmail.com">Christian Holl</maintainer>
 <license>BSD</license>
 <buildtool_depend>catkin</buildtool_depend>
 <build_depend>roscpp</build_depend>
</package>